--- a/week3/Stationarity.Rmd
+++ b/week3/Stationarity.Rmd
@@ -80,3 +80,7 @@ MA(q) - q!!!
 Hard to come up with a naturally occuring moving average.
 
 ## 
+
+# References
+
+- https://www.youtube.com/watch?v=JytDF8ph2ko
